update, structured-data, amp

--- a/amp/contact-us.html
+++ b/amp/contact-us.html
@@ -3,14 +3,18 @@
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
     <title>Los Pollos Hermanos - Contact us</title>
+    <!-- Meta -->
     <meta content="repat" name="author" />
     <meta content="Los Pollos Hermanos - Fast food chicken" name="description" />
     <meta content="los,pollos,hermanos,breaking,bad,fast food,chicken" name="keywords" />
     <meta name="robots" content="index, follow">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="amphtml" href="amp/contact-us.html" />
+    <!-- <link rel="shortcut icon" href="favicon.ico"> -->
+    <!-- Let the browser know that it has to scale your webpage appropriately on every device -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- JS -->
     <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- CSS -->
     <link href="//netdna.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
