--- a/amp/how-to-find-us.html
+++ b/amp/how-to-find-us.html
@@ -2,15 +2,18 @@
 <html lang="en">
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-    <title>Los Pollos Hermanos - Contact us</title>
+    <title>Los Pollos Hermanos - How to find us</title>
+    <!-- Meta -->
     <meta content="repat" name="author" />
     <meta content="Los Pollos Hermanos - Fast food chicken" name="description" />
     <meta content="los,pollos,hermanos,breaking,bad,fast food,chicken" name="keywords" />
     <meta name="robots" content="index, follow">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="amphtml" href="amp/contact-us.html" />
+    <!-- <link rel="shortcut icon" href="favicon.ico"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- JS -->
     <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- CSS -->
     <link href="//netdna.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -42,14 +45,19 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
-            <i class="fa fa-envelope"></i> E-Mail: <a href="mailto:contact@domain.tld">contact@domain.tld</a> <br />
-            <i class="fa fa-phone"></i> Tel: <a href="tel:555123456789">(555) 123 456 789</a> <br />
-            <!-- This will only work for Android phones and if the number is registered with WA-->
-            <i class="fa fa-whatsapp"></i> WhatsApp: <a href="intent://send/555123456789#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end">(555) 123 456 789</a> <br />
+          <div class="col-md-4">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.7543070738925!2d-0.15740098422964682!3d51.51772337963691!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761acdabd7f677%3A0xa3fa518b103821ce!2s22b+Baker+St%2C+Marylebone%2C+London+W1U+3BW%2C+Vereinigtes+K%C3%B6nigreich!5e0!3m2!1sde!2sde!4v1501597134837" width="320" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+          <div class="col-md-8">
+            <br />
+            S. Holmes <br />
+            Baker Street 22B  <br />
+            W1U 3BW London, UK <br />
             <br />
             <br />
-            Webmaster: webmaster@domain.tld
+            Opening times: <br />
+            Mon-Sun 19:00 - late
+          </div>
         </div>
       </div>  
     </main>
