--- a/amp/index.html
+++ b/amp/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ⚡ lang="en">
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
     <title>Los Pollos Hermanos</title>
+    <!-- Meta -->
     <meta content="repat" name="author" />
     <meta content="Los Pollos Hermanos - Fast food chicken" name="description" />
     <meta content="los,pollos,hermanos,breaking,bad,fast food,chicken" name="keywords" />
     <meta name="robots" content="index, follow">
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="amphtml" href="amp/index.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js"></script>
-    <link href="//netdna.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="own.css" rel="stylesheet" type="text/css" />
+    <style amp-custom>li{margin:0 0 10px 0;}</style>
+    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
+    <noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+    <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
@@ -36,8 +35,7 @@
             "Chicken",
             "Mexican"
         ],
-        "url": "http://los-pollos-hermanos.com",
-        "image": "http://los-pollos-hermanos.com/img/logo.png"
+        "url": "http://los-pollos-hermanos.com"
       }
     </script>
     <script type="application/ld+json">
@@ -50,11 +48,9 @@
           "addressRegion": "RI",
           "streetAddress": "1901 Lemur Ave"
         },
-        "priceRange": "$$",
         "description": "Chicken Fast Food",
         "name": "Los Pollos Hermanos",
-        "telephone": "+155501003333",
-        "image": "http://los-pollos-hermanos.com/img/logo.png"
+        "telephone": "+155501003333"
       }
     </script>
   </head>
@@ -105,12 +101,13 @@
 
     <footer>
     <hr />
-    <a href="https://facebook.com/restaurant-template" ><i class="fa fa-facebook"></i></a> - 
-    <a href="https://instagram.com/restaurant-template"><i class="fa fa-instagram"></i></a> -
-    <a href="https://tripadvisor.com/restaurant-template"><i class="fa fa-tripadvisor"></i></a> -
-    <a href="mailto:contact@domain.tld"><i class="fa fa-envelope"></i></a> -
-    <a href="tel:555123556789"><i class="fa fa-phone"></i> (555) 123 456 789</a> -
-    <a href="sitemap.html">Sitemap</a>
+    <ul>
+      <li><a href="https://facebook.com/restaurant-template" ><i class="fa fa-facebook"></i></a></li>
+      <li><a href="https://instagram.com/restaurant-template"><i class="fa fa-instagram"></i></a></li>
+      <li><a href="https://tripadvisor.com/restaurant-template"><i class="fa fa-tripadvisor"></i></a></li>
+      <li><a href="mailto:contact@domain.tld"><i class="fa fa-envelope"></i></a></li>
+      <li><a href="tel:555123556789"><i class="fa fa-phone"></i> (555) 123 456 789</a></li>
+      <li><a href="../sitemap.html">Sitemap</a></li>
       </li>
     </ul>
     </footer>
