--- a/amp/menu.html
+++ b/amp/menu.html
@@ -2,15 +2,18 @@
 <html lang="en">
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-    <title>Los Pollos Hermanos - Contact us</title>
+    <title>Los Pollos Hermanos - Menu</title>
+    <!-- Meta -->
     <meta content="repat" name="author" />
     <meta content="Los Pollos Hermanos - Fast food chicken" name="description" />
     <meta content="los,pollos,hermanos,breaking,bad,fast food,chicken" name="keywords" />
     <meta name="robots" content="index, follow">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="amphtml" href="amp/contact-us.html" />
+    <!-- <link rel="shortcut icon" href="favicon.ico"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- JS -->
     <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- CSS -->
     <link href="//netdna.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -42,17 +45,72 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
-            <i class="fa fa-envelope"></i> E-Mail: <a href="mailto:contact@domain.tld">contact@domain.tld</a> <br />
-            <i class="fa fa-phone"></i> Tel: <a href="tel:555123456789">(555) 123 456 789</a> <br />
-            <!-- This will only work for Android phones and if the number is registered with WA-->
-            <i class="fa fa-whatsapp"></i> WhatsApp: <a href="intent://send/555123456789#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end">(555) 123 456 789</a> <br />
-            <br />
-            <br />
-            Webmaster: webmaster@domain.tld
+          <div class="col-md-12">            
+          <table class="table table-stripped table-responsive">
+            <tr>
+              <th>
+              Item
+              </th>
+              <th>
+              Price
+              </th>
+            </tr>
+            <tr>
+              <td>
+              Krabby Pattie
+              </td>
+              <td>
+              2.00
+              </td>
+            </tr>
+            <tr>
+              <td>
+              Krusty Combo
+              </td>
+              <td>
+              3.99
+              </td>
+            </tr>
+            <tr>
+              <td>
+              Krusty Deluxe
+              </td>
+              <td>
+              3.00
+              </td>
+            </tr>
+            <tr>
+              <td>
+              
+              </td>
+              <td>
+              
+              </td>
+            </tr>
+            <tr>
+              <td>
+              Seaweed Salad
+              </td>
+              <td>
+                1.50
+              </td>
+            </tr>
+            <tr>
+              <td>
+              Coral Bits
+              </td>
+              <td>
+                1.95
+              </td>
+            </tr>
+          </table>
+          <br />
+          <br />
+          <a href="http://de.spongepedia.org/images/115a-Speisekarte_KK.jpg"><i class="fa fa-download"></i> Download as .pdf</a>
+          </div>          
         </div>
       </div>  
     </main>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" />
+    </body>
   </body>
 </html>
