--- a/amp/restaurant.html
+++ b/amp/restaurant.html
@@ -1,69 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html amp lang="en">
   <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-    <title>Los Pollos Hermanos - Restaurant</title>
-    <!-- Meta -->
-    <meta content="repat" name="author" />
-    <meta content="Los Pollos Hermanos - Fast food chicken" name="description" />
-    <meta content="los,pollos,hermanos,breaking,bad,fast food,chicken" name="keywords" />
-    <meta name="robots" content="index, follow">
-    <!-- <link rel="shortcut icon" href="favicon.ico"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- JS -->
-    <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- CSS -->
-    <link href="//netdna.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="own.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8">
+    <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <title>Hello, AMPs</title>
+    <link rel="canonical" href="https://los-pollos-hermanos.com/restaurant.html">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   </head>
   <body>
-    <header>
-      <nav>
-        <div class="navbar navbar-default">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/"><h1>Los Pollos Hermanos</h1></a>
-          </div>
-          <div class="navbar-collapse collapse navbar-responsive-collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="restaurant.html"><i class="ion ion-android-restaurant"></i> Restaurant</a> </li>
-              <li><a href="menu.html"><i class="ion ion-ios-paper"></i> Menu</a> </li>
-              <li><a href="how-to-find-us.html"><i class="ion ion-navigate"></i> How to find us</a> </li>
-              <li><a href="contact-us.html"><i class="fa fa-envelope"></i> Contact us</a></li>
-            </ul>
-          </div><!-- /.nav-collapse -->
-        </div><!-- /.navbar -->
-      </nav>
-    </header>
-    <main>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <img src="img/restaurant.png" alt="Restaurant"  height="400" />
-          </div>
-          <div class="col-md-6">
-            <img src="img/restaurant.png" alt="Restaurant"  height="400" />
-          </div>
-          </div>
-          <div class="row">
-          <div class="col-md-6">
-            <img src="img/restaurant.png" alt="Restaurant"  height="400" />
-          </div>
-          <div class="col-md-6">
-            <img src="img/restaurant.png" alt="Restaurant"  height="400" />
-          </div>
-          </div>
-          </div>
-        </div>
-      </div>  
-    </main>
-    </body>
+    <h1>Welcome to the mobile web</h1>
   </body>
 </html>
