--- a/amp/index.html
+++ b/amp/index.html
@@ -1,115 +1,14 @@
-<!DOCTYPE html>
-<html ⚡ lang="en">
+<!doctype html>
+<html amp lang="en">
   <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-    <title>Los Pollos Hermanos</title>
-    <!-- Meta -->
-    <meta content="repat" name="author" />
-    <meta content="Los Pollos Hermanos - Fast food chicken" name="description" />
-    <meta content="los,pollos,hermanos,breaking,bad,fast food,chicken" name="keywords" />
-    <meta name="robots" content="index, follow">
-    <link rel="shortcut icon" href="favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style amp-custom>li{margin:0 0 10px 0;}</style>
-    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
-    <noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+    <meta charset="utf-8">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <script type="application/ld+json">
-      {
-        "@context": "http://schema.org",
-        "@type": "Restaurant",
-        "name": "Los Pollos Hermanos",
-        "description": "Chicken Fast Food",
-        "openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 11:30-23:00",
-        "telephone": "+155501003333",
-        "menu": "http://los-pollos-hermanos.com/menu.html",
-        "address": {
-          "@type": "PostalAddress",
-          "addressLocality": "Quahog",
-          "addressRegion": "RI",
-          "postalCode": "66642",
-          "streetAddress": "1901 Lemur Ave"
-        },
-        "priceRange": "$$",
-         "servesCuisine": [
-            "Chicken",
-            "Mexican"
-        ],
-        "url": "http://los-pollos-hermanos.com"
-      }
-    </script>
-    <script type="application/ld+json">
-      {
-        "@context": "http://schema.org",
-        "@type": "LocalBusiness",
-        "address": {
-          "@type": "PostalAddress",
-          "addressLocality": "Quahog",
-          "addressRegion": "RI",
-          "streetAddress": "1901 Lemur Ave"
-        },
-        "description": "Chicken Fast Food",
-        "name": "Los Pollos Hermanos",
-        "telephone": "+155501003333"
-      }
-    </script>
+    <title>Hello, AMPs</title>
+    <link rel="canonical" href="https://los-pollos-hermanos.com/index.html">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   </head>
   <body>
-    <header>
-      <nav>
-        <div class="navbar navbar-default">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/"><h1>Los Pollos Hermanos</h1></a>
-          </div>
-          <div class="navbar-collapse collapse navbar-responsive-collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="restaurant.html"><i class="ion ion-android-restaurant"></i> Restaurant</a> </li>
-              <li><a href="menu.html"><i class="ion ion-ios-paper"></i> Menu</a> </li>
-              <li><a href="how-to-find-us.html"><i class="ion ion-navigate"></i> How to find us</a> </li>
-              <li><a href="contact-us.html"><i class="fa fa-envelope"></i> Contact us</a></li>
-            </ul>
-          </div><!-- /.nav-collapse -->
-        </div><!-- /.navbar -->
-      </nav>
-    </header>
-    <main>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <img src="img/pizza.png" alt="Pizza"  height="400" />
-          </div>
-          <div class="col-md-8">
-            <br />
-            <br />
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-            <br />
-            <br />
-            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-            <br />
-            <br />
-            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-          </div>
-          
-        </div>
-      </div>  
-    </main>
-
-    <footer>
-    <hr />
-    <ul>
-      <li><a href="https://facebook.com/restaurant-template" ><i class="fa fa-facebook"></i></a></li>
-      <li><a href="https://instagram.com/restaurant-template"><i class="fa fa-instagram"></i></a></li>
-      <li><a href="https://tripadvisor.com/restaurant-template"><i class="fa fa-tripadvisor"></i></a></li>
-      <li><a href="mailto:contact@domain.tld"><i class="fa fa-envelope"></i></a></li>
-      <li><a href="tel:555123556789"><i class="fa fa-phone"></i> (555) 123 456 789</a></li>
-      <li><a href="../sitemap.html">Sitemap</a></li>
-      </li>
-    </ul>
-    </footer>
+    <h1>Welcome to the mobile web</h1>
   </body>
 </html>
